--- a/static/index.html
+++ b/static/index.html
@@ -62,8 +62,8 @@
 
     .glass-card {
       background: var(--glass);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      backdrop-filter: none;
+      -webkit-backdrop-filter: none;
       border: 1px solid rgba(255, 255, 255, 0.3);
       box-shadow: 0 8px 32px 0 rgba(26, 107, 89, 0.08);
     }
@@ -230,14 +230,6 @@
         </div>
       </div>
 
-      <div class="mt-20 w-full max-w-5xl relative">
-        <div class="absolute inset-0 bg-primary/20 blur-[120px] rounded-full -z-10 opacity-30"></div>
-        <div class="glass-card rounded-[2.5rem] p-4 p-md-8 border-white/50 border-2 overflow-hidden shadow-2xl">
-          <img
-            src="https://lh3.googleusercontent.com/aida/AOfcidW62bqKKDlveYRqKjpD61maIWrvhxuw_LgzN1Dx8NBp8gqzsk5UKPq9s5DISz4LZmhTeZNF1jjcIC_f90fWzZjqoH7Jlm-h5qfoGwqD_rkSOsjbXE6D9-wLtBkTxd1G8s2q4NIpVLEoRBtaLtWuYY6Cb100ny2e5V7pkPxDRViE6ElY97rIWrk_VmqAlnDu70040aBW4fgkdk7e3hdS9MTCjLBpTiDdgQtjK4I_lnjBZFfZ_oF3KvuEp3mA"
-            alt="App Preview" class="w-full rounded-2xl shadow-inner">
-        </div>
-      </div>
     </main>
 
     <footer class="py-12 border-t border-slate-100 mt-20">
